--- a/Visualization/index.html
+++ b/Visualization/index.html
@@ -2,15 +2,62 @@
 <html lang="en">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>NBA Data Visualization</title>
-    <link rel="stylesheet" href="styles.css">
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>NBA Player Stat Analyzer</title>
     <script src="https://d3js.org/d3.v7.min.js"></script>
+    <link rel="stylesheet" href="styles.css" />
 </head>
 
 <body>
-    <div id="visualization"></div>
+    <h1>NBA Player Stat Analyzer</h1>
+
+    <div class="controls">
+        <label for="teamSelect">Select Team:</label>
+        <select id="teamSelect"></select>
+
+        <label for="playerSelect">Select Player:</label>
+        <select id="playerSelect"></select>
+
+        <label for="statSelect">Select Stat:</label>
+        <select id="statSelect">
+            <option value="PTS">Points</option>
+            <option value="MP">Minutes Played</option>
+            <option value="AST">Assists</option>
+            <option value="TRB">Total Rebounds</option>
+            <option value="STL">Steals</option>
+            <option value="BLK">Blocks</option>
+        </select>
+
+        <label for="gameCountSelect">Games to Display:</label>
+        <select id="gameCountSelect">
+            <option value="50">Last 50</option>
+            <option value="25">Last 25</option>
+            <option value="15">Last 15</option>
+            <option value="10">Last 10</option>
+            <option value="5">Last 5</option>
+        </select>
+
+        <label for="baselineInput">Baseline Value:</label>
+        <input type="number" id="baselineInput" placeholder="Enter baseline" />
+    </div>
+
+    <div class="dashboard">
+        <div class="viz" id="statViz">
+            <h3>Stat Performance Over Games</h3>
+            <svg id="statSVG"></svg>
+        </div>
+    </div>
+
+    <div id="tooltip" style="position: absolute; 
+                                background: white;
+                                color: black;
+                                padding: 5px; 
+                                border-radius: 4px;
+                                pointer-events: none;
+                                opacity: 0;">
+    </div>
+
     <script src="script.js"></script>
 </body>
 
